# api/swagger.json
@@ -14,20 +14,52 @@
     },
     "basePath": "/",
     "paths": {
-        "/collections": {
+        "/musics": {
             "get": {
-                "description": "Get collections.",
+                "description": "Get musics.",
                 "tags": [
-                    "collections"
+                    "musics"
                 ],
-                "summary": "Get collections.",
+                "summary": "Get musics.",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Collection"
+                                "$ref": "#/definitions/models.Music"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Something went wrong"
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a music.",
+                "tags": [
+                    "musics"
+                ],
+                "summary": "Create a music.",
+                "parameters": [
+                    {
+                        "description": "Music object",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Music"
                             }
                         }
                     },
@@ -37,17 +69,17 @@
                 }
             }
         },
-        "/collections/{id}": {
+        "/musics/{id}": {
             "get": {
-                "description": "Get a collection.",
+                "description": "Get a music.",
                 "tags": [
-                    "collections"
+                    "musics"
                 ],
-                "summary": "Get a collection.",
+                "summary": "Get a music.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Collection UUID formatted ID",
+                        "description": "Music UUID formatted ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -57,7 +89,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Collection"
+                            "$ref": "#/definitions/models.Music"
                         }
                     },
                     "422": {
@@ -71,13 +103,22 @@
         }
     },
     "definitions": {
-        "models.Collection": {
+        "models.Music": {
             "type": "object",
             "properties": {
-                "content": {
+                "albumId": {
+                    "type": "string"
+                },
+                "artistId": {
+                    "type": "string"
+                },
+                "genreId": {
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
